Use of response design.

--- a/src/Club/LayoutBundle/Resources/views/Default/base.html.twig
+++ b/src/Club/LayoutBundle/Resources/views/Default/base.html.twig
@@ -9,6 +9,7 @@
 
     <link rel="stylesheet" href="{{ asset('bundles/clublayout/css/ui-lightness/jquery-ui-1.8.23.custom.css') }}" />
     <link rel="stylesheet" href="{{ asset('bundles/clublayout/bootstrap/css/bootstrap.min.css') }}" />
+    <link rel="stylesheet" href="{{ asset('bundles/clublayout/bootstrap/css/bootstrap-responsive.min.css') }}" />
     <link rel="stylesheet" href="{{ asset('bundles/clublayout/css/mystyle.css') }}" />
     <style type="text/css">
       body {
