Fixed color on waiting orders.

--- a/src/Club/ShopBundle/Resources/views/Dashboard/order_table.html.twig
+++ b/src/Club/ShopBundle/Resources/views/Dashboard/order_table.html.twig
@@ -19,7 +19,7 @@
   </tfoot>
   <tbody>
   {% for order in orders %}
-    <tr>
+    <tr class="warning">
       <td>{{ order.orderNumber }}</td>
       <td>{{ order.user.profile.firstName }} {{ order.user.profile.lastName }}</td>
       <td>{{ order.price|club_price }}</td>
