--- a/src/Club/WelcomeBundle/Resources/views/Blog/comment.html.twig
+++ b/src/Club/WelcomeBundle/Resources/views/Blog/comment.html.twig
@@ -6,12 +6,6 @@
 
 {% block body %}
 
-<form method="post" action="{{ path('club_welcome_blog_comment', {'blog_id':blog.id}) }}" class="form-horizontal">
-
-<legend>{% trans %}Message{% endtrans %}</legend>
-{{ form_widget(form) }}
-{% include "ClubLayoutBundle:Default:submit_button.html.twig" with {'novalidate':true} %}
-
-</form>
+{% include "ClubLayoutBundle:Default:form.html.twig" with {'path':path('club_welcome_blog_comment', {'blog_id':blog.id}), 'novalidate':true} %}
 
 {% endblock %}
