--- a/src/Club/WelcomeBundle/Resources/views/Blog/edit.html.twig
+++ b/src/Club/WelcomeBundle/Resources/views/Blog/edit.html.twig
@@ -5,9 +5,5 @@
 {% endblock %}
 
 {% block body %}
-
-<form method="post" action="{{ path('club_welcome_blog_edit', {'id':blog.id}) }}" class="form-horizontal">
-{% include "ClubWelcomeBundle:Blog:form.html.twig" %}
-</form>
-
+{% include "ClubLayoutBundle:Default:form.html.twig" with {'path':path('club_welcome_blog_edit', {'id':blog.id}), 'novalidate':true} %}
 {% endblock %}
