--- a/src/Club/WelcomeBundle/Resources/views/AdminBlog/new.html.twig
+++ b/src/Club/WelcomeBundle/Resources/views/AdminBlog/new.html.twig
@@ -5,9 +5,5 @@
 {% endblock %}
 
 {% block body %}
-
-<form method="post" action="{{ path('club_welcome_adminblog_new') }}">
-{% include "ClubWelcomeBundle:AdminBlog:form.html.twig" %}
-</form>
-
+{% include "ClubLayoutBundle:Default:form.html.twig" with {'path':path('club_welcome_adminblog_new'),'novalidate':true} %}
 {% endblock %}
