--- a/src/Club/WelcomeBundle/Resources/views/AdminWelcome/edit.html.twig
+++ b/src/Club/WelcomeBundle/Resources/views/AdminWelcome/edit.html.twig
@@ -6,8 +6,6 @@
 
 {% block body %}
 
-<form method="post" action="{{ path('club_welcome_adminwelcome_edit', {'location_id':welcome.location.id}) }}">
-{% include "ClubWelcomeBundle:AdminWelcome:form.html.twig" %}
-</form>
+{% include "ClubLayoutBundle:Default:form.html.twig" with {'path':path('club_welcome_adminwelcome_edit', {'location_id':welcome.location.id}), 'novalidate':true} %}
 
 {% endblock %}
