--- a/src/Club/TeamBundle/Resources/views/AdminTeamCategory/edit.html.twig
+++ b/src/Club/TeamBundle/Resources/views/AdminTeamCategory/edit.html.twig
@@ -1,9 +1,5 @@
 {% extends "ClubTeamBundle::base.html.twig" %}
 
 {% block body %}
-
-<form method="post" action="{{ path('club_team_adminteamcategory_edit', {'id':category.id}) }}">
-{% include "ClubLayoutBundle:Default:form.html.twig" %}
-</form>
-
+{% include "ClubLayoutBundle:Default:form.html.twig" with {'path':path('club_team_adminteamcategory_edit', {'id':category.id})} %}
 {% endblock %}
