Fixed lots of forms.

--- a/src/Club/BookingBundle/Resources/views/AdminInterval/manage.html.twig
+++ b/src/Club/BookingBundle/Resources/views/AdminInterval/manage.html.twig
@@ -2,7 +2,7 @@
 
 {% block body %}
 
-<form method="post" action="{{ path('club_booking_admininterval_manage', {'field_id':field.id}) }}">
+<form method="post" action="{{ path('club_booking_admininterval_manage', {'field_id':field.id}) }}" class="form-horizontal">
 
 <fieldset>
   <legend>Generel Information</legend>
