--- a/src/Club/InstallerBundle/Resources/views/Installer/administrator.html.twig
+++ b/src/Club/InstallerBundle/Resources/views/Installer/administrator.html.twig
@@ -5,7 +5,7 @@
 
 <p>{% trans %}This is the installer of ClubMaster.{% endtrans %}</p>
 
-<form method="post" action="">
+<form method="post" action="" class="form-horizontal">
   <fieldset>
     <legend>{% trans %}Personal Information{% endtrans %}</legend>
 
