--- a/src/Club/InstallerBundle/Resources/views/Installer/location.html.twig
+++ b/src/Club/InstallerBundle/Resources/views/Installer/location.html.twig
@@ -5,7 +5,7 @@
 
 <p>{% trans %}This is the installer of ClubMaster.{% endtrans %}</p>
 
-<form method="post" action="{{ path('club_installer_installer_location') }}">
+<form method="post" action="{{ path('club_installer_installer_location') }}" class="form-horizontal">
   <fieldset>
     <legend>{% trans %}Location Information{% endtrans %}</legend>
 
