--- a/src/Club/MatchBundle/Resources/views/LeagueMatch/new.html.twig
+++ b/src/Club/MatchBundle/Resources/views/LeagueMatch/new.html.twig
@@ -7,7 +7,7 @@
 {% include "ClubLayoutBundle:Default:ajax_user.html.twig" with {'search_field':'#form_user1','input_id':'#form_user1_id','url': 'api/matches/search/' ~ league.id } %}
 
 <h2>{{ league.name }}</h2>
-<form method="post" action="{{ path('club_match_leaguematch_new', {'league_id':league.id}) }}">
+<form method="post" action="{{ path('club_match_leaguematch_new', {'league_id':league.id}) }}" class="form-horizontal">
 
   <!-- Input Text -->
   <fieldset>
