--- a/src/Club/BookingBundle/Resources/views/AdminPlan/new.html.twig
+++ b/src/Club/BookingBundle/Resources/views/AdminPlan/new.html.twig
@@ -1,9 +1,5 @@
 {% extends "ClubBookingBundle::base.html.twig" %}
 
 {% block body %}
-
-<form method="post" action="{{ path('club_booking_adminplan_new') }}" class="form-horizontal">
-{% include "ClubBookingBundle:AdminPlan:form.html.twig" %}
-</form>
-
+{% include "ClubLayoutBundle:Default:form.html.twig" with {'path':path('club_booking_adminplan_new')} %}
 {% endblock %}
