--- a/src/Club/BookingBundle/Resources/views/Booking/cancel_form.html.twig
+++ b/src/Club/BookingBundle/Resources/views/Booking/cancel_form.html.twig
@@ -2,11 +2,7 @@
   <legend>{% trans %}Delete{% endtrans %}</legend>
 
   <p>{% trans %}Click here to cancel your booking.{% endtrans %}</p>
-  <form method="post" action="{{ path('club_booking_booking_cancel', {'id':booking.id}) }}">
-    <hr class="noscreen" />
-    <div class="box-01">
-      <p class="nom"><input type="submit" value="{% trans %}Cancel{% endtrans %}" class="input-submit" /></p>
-    </div> <!-- /box-01 -->
-  </form>
+
+    {% include "ClubLayoutBundle:Default:form.html.twig" with {'path':path('club_booking_booking_cancel', {'id':booking.id}), 'button':'Cancel'|trans} %}
 </fieldset>
 
