--- a/src/Club/MatchBundle/Resources/views/AdminLeague/users.html.twig
+++ b/src/Club/MatchBundle/Resources/views/AdminLeague/users.html.twig
@@ -14,7 +14,7 @@
 <h2>{% trans %}Add players to league{% endtrans %}</h2>
 
 {% include "ClubLayoutBundle:Default:ajax_user.html.twig" with {'search_field':'#form_user','input_id':'#form_user_id', 'url':'api/users/search'} %}
-<form method="post" action="{{ path('club_match_adminleague_usersadd', {'id':league.id}) }}">
+<form method="post" action="{{ path('club_match_adminleague_usersadd', {'id':league.id}) }}" class="form-horizontal">
   <fieldset>
     <legend>{% trans %}Add player{% endtrans %}</legend>
 
