--- a/src/Club/MessageBundle/Resources/views/AdminMessage/recipient.html.twig
+++ b/src/Club/MessageBundle/Resources/views/AdminMessage/recipient.html.twig
@@ -42,11 +42,6 @@
   </table>
 </fieldset>
 
-<hr class="noscreen" />
-<div class="box-01">
-  <form method="POST" action="{{ path('club_message_adminmessage_process', {'id':message.id}) }}">
-    <p class="nom"><input type="submit" value="{% trans %}Send message{% endtrans %}" class="input-submit" /></p>
-  </form>
-</div> <!-- /box-01 -->
+{% include "ClubLayoutBundle:Default:form.html.twig" with {'path':path('club_message_adminmessage_process', {'id':message.id}), 'button':'Send message'|trans} %}
 
 {% endblock %}
