--- a/src/Club/TournamentBundle/Resources/views/AdminTournament/edit.html.twig
+++ b/src/Club/TournamentBundle/Resources/views/AdminTournament/edit.html.twig
@@ -1,9 +1,5 @@
 {% extends "ClubTournamentBundle::base.html.twig" %}
 
 {% block body %}
-
-<form method="post" action="{{ path('club_tournament_admintournament_edit', {'id':tournament.id}) }}">
-{% include "ClubLayoutBundle:Default:form.html.twig" %}
-</form>
-
+{% include "ClubLayoutBundle:Default:form.html.twig" with {'path':path('club_tournament_admintournament_edit', {'id':tournament.id})} %}
 {% endblock %}
