--- a/src/Club/UserBundle/Resources/views/Currency/edit.html.twig
+++ b/src/Club/UserBundle/Resources/views/Currency/edit.html.twig
@@ -1,9 +1,5 @@
 {% extends "ClubUserBundle::base.html.twig" %}
 
 {% block body %}
-
-<form method="post" action="{{ path('admin_currency_edit', {'id':currency.id}) }}">
-{% include "ClubLayoutBundle:Default:form.html.twig" %}
-</form>
-
+{% include "ClubLayoutBundle:Default:form.html.twig" with {'path':path('admin_currency_edit', {'id':currency.id})} %}
 {% endblock %}
