--- a/src/Club/UserBundle/Resources/views/Currency/new.html.twig
+++ b/src/Club/UserBundle/Resources/views/Currency/new.html.twig
@@ -1,9 +1,5 @@
 {% extends "ClubUserBundle::base.html.twig" %}
 
 {% block body %}
-
-<form method="post" action="{{ path('admin_currency_new') }}">
-{% include "ClubLayoutBundle:Default:form.html.twig" %}
-</form>
-
+{% include "ClubLayoutBundle:Default:form.html.twig" with {'path':path('admin_currency_new')} %}
 {% endblock %}
