--- a/src/Club/UserBundle/Resources/views/User/reset.html.twig
+++ b/src/Club/UserBundle/Resources/views/User/reset.html.twig
@@ -3,8 +3,5 @@
 {% block body %}
 
 <p>{% trans %}Your password has been expired, please enter a new one below.{% endtrans %}</p>
-<form method="post" action="{{ path('club_user_user_reset') }}">
-{% include "ClubLayoutBundle:Default:form.html.twig" %}
-</form>
-
+{% include "ClubLayoutBundle:Default:form.html.twig" with {'path':path('club_user_user_reset')} %}
 {% endblock %}
