--- a/src/Club/UserBundle/Resources/views/UserNote/edit.html.twig
+++ b/src/Club/UserBundle/Resources/views/UserNote/edit.html.twig
@@ -1,9 +1,5 @@
 {% extends "ClubUserBundle::base.html.twig" %}
 
 {% block body %}
-
-<form method="post" action="{{ path('admin_user_note_edit', {'id':user_note.id}) }}">
-{% include "ClubLayoutBundle:Default:form.html.twig" %}
-</form>
-
+{% include "ClubLayoutBundle:Default:form.html.twig" with {'path':path('admin_user_note_edit', {'id':user_note.id})} %}
 {% endblock %}
