--- a/src/Club/BookingBundle/Resources/views/Dashboard/booking_table.html.twig
+++ b/src/Club/BookingBundle/Resources/views/Dashboard/booking_table.html.twig
@@ -1,4 +1,4 @@
-<h2>{% trans %}Your bookings{% endtrans %}</h2>
+<h2><img src="{{ asset('bundles/clublayout/images/icons/32x32/time.png') }}" /> {% trans %}Your bookings{% endtrans %}</h2>
 
 <table class="table">
   <thead>
