--- a/src/Club/ShopBundle/Resources/views/Dashboard/order_table.html.twig
+++ b/src/Club/ShopBundle/Resources/views/Dashboard/order_table.html.twig
@@ -1,4 +1,4 @@
-<h2>{% trans %}Open orders{% endtrans %}</h2>
+<h2><img src="{{ asset('bundles/clublayout/images/icons/32x32/cart.png') }}" /> {% trans %}Open orders{% endtrans %}</h2>
 
 <table class="table">
   <thead>
