--- a/src/Club/ShopBundle/Resources/views/Dashboard/subscription_table.html.twig
+++ b/src/Club/ShopBundle/Resources/views/Dashboard/subscription_table.html.twig
@@ -1,3 +1,3 @@
-<h2>{% trans %}Your subscriptions{% endtrans %}</h2>
+<h2><img src="{{ asset('bundles/clublayout/images/icons/32x32/vcard.png') }}" /> {% trans %}Your subscriptions{% endtrans %}</h2>
 
 {% include "ClubShopBundle:Subscription:subscription_table.html.twig" %}
