--- a/src/Club/TeamBundle/Resources/views/Dashboard/team_table.html.twig
+++ b/src/Club/TeamBundle/Resources/views/Dashboard/team_table.html.twig
@@ -1,4 +1,4 @@
-<h2>{% trans %}Your teams{% endtrans %}</h2>
+<h2><img src="{{ asset('bundles/clublayout/images/icons/32x32/book.png') }}" /> {% trans %}Your teams{% endtrans %}</h2>
 
 <table class="table">
   <thead>
