--- a/src/Club/InstallerBundle/Resources/views/Upgrade/index.html.twig
+++ b/src/Club/InstallerBundle/Resources/views/Upgrade/index.html.twig
@@ -1,4 +1,4 @@
-{% extends "ClubLayoutBundle:Default:base_simple.html.twig" %}
+{% extends "ClubLayoutBundle:Default:base.html.twig" %}
 
 {% block body %}
 <h2>ClubMaster Upgrader</h2>
