--- a/src/Club/UserBundle/Resources/views/Member/show.html.twig
+++ b/src/Club/UserBundle/Resources/views/Member/show.html.twig
@@ -1,8 +1,12 @@
 {% extends "ClubUserBundle::base.html.twig" %}
 
-{% block body %}
+{% block header %}
+<div class="page-header">
+    <h1><img class="img-polaroid" src="{{ asset('bundles/clublayout/images/icons/32x32/user.png') }}" /> {{ user.name }} ({{ user.memberNumber }})</h1>
+</div>
+{% endblock %}
 
-<h2>{% trans with {'%name%':user.profile.name, '%number%':user.memberNumber} %}%name% (%number%){% endtrans %}</h2>
+{% block body %}
 
 <div class="box-03 noimage box">
 
