--- a/src/Club/LayoutBundle/Resources/views/Default/search_form.html.twig
+++ b/src/Club/LayoutBundle/Resources/views/Default/search_form.html.twig
@@ -1,13 +1,14 @@
             {% if is_granted('ROLE_ADMIN') %}
             <div class="well">
                 <!-- Search -->
-                {% include "ClubLayoutBundle:Default:ajax_user.html.twig" with {'search_field':'#query', 'input_id':'#query_id','url':'api/users/search'} %}
-                <form action="{{ path('club_user_filter_quick') }}" method="POST" id="search">
-                    <fieldset>
-                        <legend>{% trans %}Search{% endtrans %}</legend>
-                           <p><input type="text" size="17" id="query" name="query" class="input-text" />&nbsp;<input type="submit" value="{% trans %}OK{% endtrans %}" class="input-submit-02" /></p>
-                    </fieldset>
+                <h2>{% trans %}Search{% endtrans %}</h2>
+                {% include "ClubLayoutBundle:Default:ajax_user.html.twig" %}
+                <form action="{{ path('club_user_filter_quick') }}" method="POST" id="search" class="form-search">
+                    <div class="input-prepend">
+                        <button type="submit" class="btn">{% trans %}Search{% endtrans %}</button>
+                        <input type="text" id="query" name="query" class="span5 search-query" />
+                    </div>
+                    <input type="hidden" name="query_id" id="query_id" value="" />
                 </form>
             </div>
             {% endif %}
-
