--- a/src/Club/PasskeyBundle/Resources/views/AdminPasskey/edit.html.twig
+++ b/src/Club/PasskeyBundle/Resources/views/AdminPasskey/edit.html.twig
@@ -10,7 +10,7 @@
 
 {% include "ClubLayoutBundle:Default:form.html.twig" with {'path':path('club_passkey_adminpasskey_user', {'id':passkey.id}),'form':user_form} %}
 
-{% include "ClubLayoutBundle:Default:ajax_user.html.twig" with {'search_field':'#form_user', 'input_id':'#form_user_id','url':'api/users/search'} %}
+{% include "ClubLayoutBundle:Default:ajax_user.html.twig" with {'f':'#form_user', 'f_id':'#form_user_id'} %}
 
 {% else %}
 <h2>{% trans %}Assign user{% endtrans %}</h2>
