--- a/src/Club/UserBundle/Resources/views/User/index.html.twig
+++ b/src/Club/UserBundle/Resources/views/User/index.html.twig
@@ -6,6 +6,7 @@
     <div class="navbar-inner">
         <ul class="nav">
             <li><a href="{{ path('club_user_usersetting_index') }}">{% trans %}Settings{% endtrans %}</a>
+            <li><a href="{{ path('shop_subscription') }}">{% trans %}Subscriptions{% endtrans %}</a>
         </ul>
     </div>
 </div>
