--- a/src/Club/ShopBundle/Resources/views/AdminOrder/index.html.twig
+++ b/src/Club/ShopBundle/Resources/views/AdminOrder/index.html.twig
@@ -35,7 +35,7 @@
   </tfoot>
   <tbody>
   {% for order in orders %}
-    <tr>
+    <tr class="{% if order.delivered %}success{% else %}warning{% endif %}">
       <td>{{ order.orderNumber }}</td>
       <td>{{ order.user.profile.firstName }} {{ order.user.profile.lastName }}</td>
       <td>{{ order.price|club_price }}</td>
